# LookerCore

./: README.md  info.txt  looker.sh  pyproject.toml  setter.bat  setter.py  setter.sh  viewer.bat
.github/workflows/: python-publish.yml
src/: looker.bat  looker.py  viewer.py  viewer.sh
